@@ -3,8 +3,8 @@ package be.pxl.ja;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 
+import java.time.Month;
 import java.util.List;
-import java.util.stream.Collectors;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertTrue;
@@ -26,53 +26,63 @@ public class SpotifyAppTest {
 	@Test
 	void getTop5ArtistsWithHighestPopularity() {
 		List<String> top5 = spotifyApp.getTop5ArtistsWithHighestPopularity();
-		assertEquals("Billie Eilish", top5.get(0));
-		assertEquals("Post Malone", top5.get(1));
-		assertEquals("Bad Bunny", top5.get(2));
-		assertEquals("Anuel AA", top5.get(3));
-		assertEquals("Drake", top5.get(4));
+		assertEquals("Taylor Swift", top5.get(0));
+		assertEquals("Arctic Monkeys", top5.get(1));
+		assertEquals("Harry Styles", top5.get(2));
+		assertEquals("The Weeknd", top5.get(3));
+		assertEquals("Olivia Rodrigo", top5.get(4));
 	}
 
 	@Test
 	void getNumberOfUniqueArtists() {
-		assertEquals(38, spotifyApp.getNumberOfUniqueArtists());
+		assertEquals(41, spotifyApp.getNumberOfUniqueArtists());
 	}
 
 	@Test
 	void getSpotifyRecordsByArtist() {
-		List<SpotifyRecord> records = spotifyApp.getSpotifyRecordsByArtist("Billie Eilish");
-		assertEquals(2, records.size());
-		List<String> names = records.stream().map(SpotifyRecord::getArtistName).distinct().collect(Collectors.toList());
+		List<SpotifyRecord> records = spotifyApp.getSpotifyRecordsByArtist("The Weeknd");
+		assertEquals(4, records.size());
+		List<String> names = records.stream().map(SpotifyRecord::getArtistName).distinct().toList();
 		assertEquals(1, names.size());
-		assertEquals("Billie Eilish", names.get(0));
+		assertEquals("The Weeknd", names.get(0));
 	}
 
 	@Test
 	void getMostDanceableSpotifyRecord() {
 		SpotifyRecord mostDanceable = spotifyApp.getMostDanceableSpotifyRecord();
-		assertEquals(44, mostDanceable.getId());
+		assertEquals("Bad Bunny", mostDanceable.getArtistName());
+		assertEquals("Me Porto Bonito", mostDanceable.getTrackName());
 	}
 
 	@Test
 	void getDanceableGenres() {
 		String danceableGenres = spotifyApp.getDanceableGenres();
-		assertTrue(danceableGenres.contains("AUSTRALIAN_POP"));
-		assertTrue(danceableGenres.contains("BOY_BAND"));
-		assertTrue(danceableGenres.contains("CANADIAN_HIP_HOP"));
-		assertTrue(danceableGenres.contains("COUNTRY_RAP"));
+		System.out.println(danceableGenres);
+		assertTrue(danceableGenres.contains("REGGAETON"));
+		assertTrue(danceableGenres.contains("POP"));
+		assertTrue(danceableGenres.contains("HIP_HOP"));
 		assertTrue(danceableGenres.contains("DANCE_POP"));
-		assertTrue(danceableGenres.contains("REGGAETON_FLOW"));
-		assertTrue(danceableGenres.contains("RNB_EN_ESPANOL"));
+		assertTrue(danceableGenres.contains("K_POP"));
 		assertTrue(danceableGenres.contains(","));
 	}
 
 	@Test
-	void getMaxLength() {
-		assertEquals(309, spotifyApp.getMaxLength());
+	void getMaxDuration() {
+		assertEquals(272373, spotifyApp.getMaxDuration());
+	}
+
+	@Test
+	void getAverageDuration() {
+		assertEquals(200458.1, spotifyApp.getAverageDuration());
+	}
+
+	@Test
+	void getSpotifyRecordsReleasedInApril() {
+		assertEquals(5, spotifyApp.getNumberOfReleases(Month.APRIL));
 	}
 
 	@Test
 	void getMostPopularGenre() {
-		assertEquals(Genre.DANCE_POP, spotifyApp.getMostPopularGenre());
+		assertEquals(Genre.POP, spotifyApp.getMostPopularGenre());
 	}
 }
